--- a/fr/about.html
+++ b/fr/about.html
@@ -55,34 +55,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/about">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/about">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/about">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/about">Deutsch</a></li>
-                <li><a href="/omegat-website/el/about">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/about">English</a></li>
-                <li><a href="/omegat-website/es/about">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/about">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/about">Galego</a></li>
-                <li><a href="/omegat-website/id/about">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/about">Interlingua</a></li>
-                <li><a href="/omegat-website/it/about">Italiano</a></li>
-                <li><a href="/omegat-website/ko/about">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/about">Magyar</a></li>
-                <li><a href="/omegat-website/ja/about">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/about">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/about">Polski</a></li>
-                <li><a href="/omegat-website/br/about">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/about">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/about">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/about">Shqip</a></li>
-                <li><a href="/omegat-website/sk/about">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/about">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/about">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/about">Suomi</a></li>
-                <li><a href="/omegat-website/sv/about">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/about">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/about">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/ar/about">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li class="disabled"><a href="/omegat-website/ca/about">Catal&#xE0;</a></li>
+                <li class="disabled"><a href="/omegat-website/cz/about">&#x10C;e&#x161;tina</a></li>
+                <li class="disabled"><a href="/omegat-website/de/about">Deutsch</a></li>
+                <li class="disabled"><a href="/omegat-website/el/about">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li class="        "><a href="/omegat-website/about">English</a></li>
+                <li class="disabled"><a href="/omegat-website/es/about">Espa&#xF1;ol</a></li>
+                <li class="        "><a href="/omegat-website/fr/about">Fran&#xE7;ais</a></li>
+                <li class="disabled"><a href="/omegat-website/gl/about">Galego</a></li>
+                <li class="disabled"><a href="/omegat-website/id/about">Bahasa Indonesia</a></li>
+                <li class="disabled"><a href="/omegat-website/ia/about">Interlingua</a></li>
+                <li class="disabled"><a href="/omegat-website/it/about">Italiano</a></li>
+                <li class="disabled"><a href="/omegat-website/ko/about">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li class="disabled"><a href="/omegat-website/hu/about">Magyar</a></li>
+                <li class="disabled"><a href="/omegat-website/ja/about">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li class="disabled"><a href="/omegat-website/nl/about">Nederlands</a></li>
+                <li class="disabled"><a href="/omegat-website/pl/about">Polski</a></li>
+                <li class="disabled"><a href="/omegat-website/br/about">Portugu&#xEA;s (Brazil)</a></li>
+                <li class="disabled"><a href="/omegat-website/pt/about">Portugu&#xEA;s (Portugal)</a></li>
+                <li class="disabled"><a href="/omegat-website/ru/about">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li class="disabled"><a href="/omegat-website/sq/about">Shqip</a></li>
+                <li class="disabled"><a href="/omegat-website/sk/about">Sloven&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/si/about">Sloven&#x161;&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/hr/about">Srpskohrvatski</a></li>
+                <li class="disabled"><a href="/omegat-website/fi/about">Suomi</a></li>
+                <li class="disabled"><a href="/omegat-website/sv/about">Svenska</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_CN/about">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_TW/about">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
           </ul>
@@ -148,26 +148,27 @@ Germany<br/>
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2 footer-column">
+      <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Réseaux sociaux</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
           <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
@@ -175,11 +176,9 @@ Germany<br/>
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
         </ul>
       </div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
-              <div class="col-sm-2 footer-column"><!-- --></div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
           <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
@@ -187,11 +186,13 @@ Germany<br/>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
           </li>
+          <li>
+            <a href="philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
+          </li>
         </ul>
       </div>
-    </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
+  <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
 </footer>
 
 
