--- a/fr/documentation.html
+++ b/fr/documentation.html
@@ -55,34 +55,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/documentation">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/documentation">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/documentation">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/documentation">Deutsch</a></li>
-                <li><a href="/omegat-website/el/documentation">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/documentation">English</a></li>
-                <li><a href="/omegat-website/es/documentation">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/documentation">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/documentation">Galego</a></li>
-                <li><a href="/omegat-website/id/documentation">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/documentation">Interlingua</a></li>
-                <li><a href="/omegat-website/it/documentation">Italiano</a></li>
-                <li><a href="/omegat-website/ko/documentation">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/documentation">Magyar</a></li>
-                <li><a href="/omegat-website/ja/documentation">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/documentation">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/documentation">Polski</a></li>
-                <li><a href="/omegat-website/br/documentation">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/documentation">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/documentation">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/documentation">Shqip</a></li>
-                <li><a href="/omegat-website/sk/documentation">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/documentation">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/documentation">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/documentation">Suomi</a></li>
-                <li><a href="/omegat-website/sv/documentation">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/documentation">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/documentation">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/ar/documentation">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li class="disabled"><a href="/omegat-website/ca/documentation">Catal&#xE0;</a></li>
+                <li class="disabled"><a href="/omegat-website/cz/documentation">&#x10C;e&#x161;tina</a></li>
+                <li class="disabled"><a href="/omegat-website/de/documentation">Deutsch</a></li>
+                <li class="disabled"><a href="/omegat-website/el/documentation">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li class="        "><a href="/omegat-website/documentation">English</a></li>
+                <li class="disabled"><a href="/omegat-website/es/documentation">Espa&#xF1;ol</a></li>
+                <li class="        "><a href="/omegat-website/fr/documentation">Fran&#xE7;ais</a></li>
+                <li class="disabled"><a href="/omegat-website/gl/documentation">Galego</a></li>
+                <li class="disabled"><a href="/omegat-website/id/documentation">Bahasa Indonesia</a></li>
+                <li class="disabled"><a href="/omegat-website/ia/documentation">Interlingua</a></li>
+                <li class="disabled"><a href="/omegat-website/it/documentation">Italiano</a></li>
+                <li class="disabled"><a href="/omegat-website/ko/documentation">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li class="disabled"><a href="/omegat-website/hu/documentation">Magyar</a></li>
+                <li class="disabled"><a href="/omegat-website/ja/documentation">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li class="disabled"><a href="/omegat-website/nl/documentation">Nederlands</a></li>
+                <li class="disabled"><a href="/omegat-website/pl/documentation">Polski</a></li>
+                <li class="disabled"><a href="/omegat-website/br/documentation">Portugu&#xEA;s (Brazil)</a></li>
+                <li class="disabled"><a href="/omegat-website/pt/documentation">Portugu&#xEA;s (Portugal)</a></li>
+                <li class="disabled"><a href="/omegat-website/ru/documentation">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li class="disabled"><a href="/omegat-website/sq/documentation">Shqip</a></li>
+                <li class="disabled"><a href="/omegat-website/sk/documentation">Sloven&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/si/documentation">Sloven&#x161;&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/hr/documentation">Srpskohrvatski</a></li>
+                <li class="disabled"><a href="/omegat-website/fi/documentation">Suomi</a></li>
+                <li class="disabled"><a href="/omegat-website/sv/documentation">Svenska</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_CN/documentation">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_TW/documentation">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
           </ul>
@@ -481,26 +481,27 @@ href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2 footer-column">
+      <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Réseaux sociaux</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
           <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
@@ -508,11 +509,9 @@ href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
         </ul>
       </div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
-              <div class="col-sm-2 footer-column"><!-- --></div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
           <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
@@ -520,11 +519,13 @@ href="http://sourceforge.net/projects/omegat/files/OmegaT%20-%20Standard/OmegaT%
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
           </li>
+          <li>
+            <a href="philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
+          </li>
         </ul>
       </div>
-    </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
+  <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
 </footer>
 
 
