--- a/fr/index.html
+++ b/fr/index.html
@@ -55,34 +55,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Langues<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/">Deutsch</a></li>
-                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/">English</a></li>
-                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/">Galego</a></li>
-                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/">Interlingua</a></li>
-                <li><a href="/omegat-website/it/">Italiano</a></li>
-                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/">Magyar</a></li>
-                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/">Polski</a></li>
-                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/">Shqip</a></li>
-                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/">Suomi</a></li>
-                <li><a href="/omegat-website/sv/">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li class="disabled"><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
+                <li class="disabled"><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
+                <li class="disabled"><a href="/omegat-website/de/">Deutsch</a></li>
+                <li class="disabled"><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li class="        "><a href="/omegat-website/">English</a></li>
+                <li class="disabled"><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
+                <li class="        "><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
+                <li class="disabled"><a href="/omegat-website/gl/">Galego</a></li>
+                <li class="disabled"><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
+                <li class="disabled"><a href="/omegat-website/ia/">Interlingua</a></li>
+                <li class="disabled"><a href="/omegat-website/it/">Italiano</a></li>
+                <li class="disabled"><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li class="disabled"><a href="/omegat-website/hu/">Magyar</a></li>
+                <li class="disabled"><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li class="disabled"><a href="/omegat-website/nl/">Nederlands</a></li>
+                <li class="disabled"><a href="/omegat-website/pl/">Polski</a></li>
+                <li class="disabled"><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
+                <li class="disabled"><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
+                <li class="disabled"><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li class="disabled"><a href="/omegat-website/sq/">Shqip</a></li>
+                <li class="disabled"><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
+                <li class="disabled"><a href="/omegat-website/fi/">Suomi</a></li>
+                <li class="disabled"><a href="/omegat-website/sv/">Svenska</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
           </ul>
@@ -235,26 +235,27 @@
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2 footer-column">
+      <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Réseaux sociaux</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
           <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
@@ -262,11 +263,9 @@
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Articles</a></li>
         </ul>
       </div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
-              <div class="col-sm-2 footer-column"><!-- --></div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
           <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact et Assistance</a>
@@ -274,11 +273,13 @@
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
           </li>
+          <li>
+            <a href="philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
+          </li>
         </ul>
       </div>
-    </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website/fr">omegat.org</a></p>
+  <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
 </footer>
 
 
