--- a/index.html
+++ b/index.html
@@ -55,34 +55,34 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Languages<span class="caret"/> <span class="sr-only">(current)</span></a>
               <ul class="dropdown-menu languages">
-                <li><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
-                <li><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
-                <li><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
-                <li><a href="/omegat-website/de/">Deutsch</a></li>
-                <li><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
-                <li><a href="/omegat-website/">English</a></li>
-                <li><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
-                <li><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
-                <li><a href="/omegat-website/gl/">Galego</a></li>
-                <li><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
-                <li><a href="/omegat-website/ia/">Interlingua</a></li>
-                <li><a href="/omegat-website/it/">Italiano</a></li>
-                <li><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
-                <li><a href="/omegat-website/hu/">Magyar</a></li>
-                <li><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
-                <li><a href="/omegat-website/nl/">Nederlands</a></li>
-                <li><a href="/omegat-website/pl/">Polski</a></li>
-                <li><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
-                <li><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
-                <li><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
-                <li><a href="/omegat-website/sq/">Shqip</a></li>
-                <li><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
-                <li><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
-                <li><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
-                <li><a href="/omegat-website/fi/">Suomi</a></li>
-                <li><a href="/omegat-website/sv/">Svenska</a></li>
-                <li><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
-                <li><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/ar/">&#x628;&#x627;&#x644;&#x639;&#x631;&#x628;&#x64A;&#x629;</a></li>
+                <li class="disabled"><a href="/omegat-website/ca/">Catal&#xE0;</a></li>
+                <li class="disabled"><a href="/omegat-website/cz/">&#x10C;e&#x161;tina</a></li>
+                <li class="disabled"><a href="/omegat-website/de/">Deutsch</a></li>
+                <li class="disabled"><a href="/omegat-website/el/">&#x395;&#x3BB;&#x3BB;&#x3B7;&#x3BD;&#x3B9;&#x3BA;&#x3AC;</a></li>
+                <li class="        "><a href="/omegat-website/">English</a></li>
+                <li class="disabled"><a href="/omegat-website/es/">Espa&#xF1;ol</a></li>
+                <li class="        "><a href="/omegat-website/fr/">Fran&#xE7;ais</a></li>
+                <li class="disabled"><a href="/omegat-website/gl/">Galego</a></li>
+                <li class="disabled"><a href="/omegat-website/id/">Bahasa Indonesia</a></li>
+                <li class="disabled"><a href="/omegat-website/ia/">Interlingua</a></li>
+                <li class="disabled"><a href="/omegat-website/it/">Italiano</a></li>
+                <li class="disabled"><a href="/omegat-website/ko/">&#xD55C;&#xAD6D;&#xC5B4;</a></li>
+                <li class="disabled"><a href="/omegat-website/hu/">Magyar</a></li>
+                <li class="disabled"><a href="/omegat-website/ja/">&#x65E5;&#x672C;&#x8A9E;</a></li>
+                <li class="disabled"><a href="/omegat-website/nl/">Nederlands</a></li>
+                <li class="disabled"><a href="/omegat-website/pl/">Polski</a></li>
+                <li class="disabled"><a href="/omegat-website/br/">Portugu&#xEA;s (Brazil)</a></li>
+                <li class="disabled"><a href="/omegat-website/pt/">Portugu&#xEA;s (Portugal)</a></li>
+                <li class="disabled"><a href="/omegat-website/ru/">&#x420;&#x443;&#x441;&#x441;&#x43A;&#x438;&#x439;</a></li>
+                <li class="disabled"><a href="/omegat-website/sq/">Shqip</a></li>
+                <li class="disabled"><a href="/omegat-website/sk/">Sloven&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/si/">Sloven&#x161;&#x10D;ina</a></li>
+                <li class="disabled"><a href="/omegat-website/hr/">Srpskohrvatski</a></li>
+                <li class="disabled"><a href="/omegat-website/fi/">Suomi</a></li>
+                <li class="disabled"><a href="/omegat-website/sv/">Svenska</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_CN/">&#x7B80;&#x4F53;&#x4E2D;&#x6587;</a></li>
+                <li class="disabled"><a href="/omegat-website/zh_TW/">&#x7E41;&#x9AD4;&#x4E2D;&#x6587;</a></li>
               </ul>
             </li>
           </ul>
@@ -196,8 +196,8 @@ translation", and you will have to look elsewhere for it.)</p>
         <li class="list-group-item"><span class="badge"><a href="download#latest">4.1.1_Beta</a></span> Latest Version</li>
       </ul>
     </div>
-
   </div>
+
   <div class="container-fluid section" id="page-quotes-carousel">
      <div class='col-md-offset-2 col-md-8'>
       <div class="carousel slide" data-ride="carousel" id="quote-carousel">
@@ -216,11 +216,11 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://www.reactiongifs.com/r/overbite.gif" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="https://randomuser.me/api/portraits/men/47.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>OmegaT is really awesome, I cannot translate anything without it!</p>
-                  <small>John Q. Translator DE &gt; EN  </small>
+                  <small>John R. - Translator DE &gt; EN  </small>
                 </div>
               </div>
             </blockquote>
@@ -230,11 +230,11 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/mijustin/128.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="https://randomuser.me/api/portraits/women/11.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-                  <small>Someone famous</small>
+                  <small>Olga Z. - Translator EN &gt; RU</small>
                 </div>
               </div>
             </blockquote>
@@ -244,11 +244,11 @@ translation", and you will have to look elsewhere for it.)</p>
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/keizgoesboom/128.jpg" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="https://randomuser.me/api/portraits/women/35.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor.</p>
-                  <small>Someone famous</small>
+                  <small>Audrey R. - Translator JA &gt; ES</small>
                 </div>
               </div>
             </blockquote>
@@ -266,9 +266,7 @@ translation", and you will have to look elsewhere for it.)</p>
   </div>
   <div class="container-fluid section" id="page-omegat-and-you">
     <h2>The OmegaT project and you</h2>
-    <div class="header-line">
-      <!---->
-    </div>
+    <div class="header-line"><!----></div>
     <p>OmegaT isn't just a product; it's an exciting project, and you can be
 part of it.</p>
     <p>OmegaT is free software. That means that users like you are free to
@@ -334,8 +332,7 @@ areas for which further volunteers would be more than welcome!</p>
         </span>
         <h3>Donations</h3>
         <p>If you have found OmegaT useful and would like to express your
-    gratitude by making a donation, go to the OmegaT SourceForge page and
-    click on "Donate".</p>
+        gratitude by making a <a href="https://sourceforge.net/p/omegat/donate/?source=website">donation</a> on our Paypal account.</p>
       </div>
     </div>
     <div class="row project">
@@ -378,26 +375,27 @@ areas for which further volunteers would be more than welcome!</p>
     <span class="glyphicon glyphicon-chevron-up"/>
   </a>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2 footer-column">
+      <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Connect</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24"/> Sourceforge</a>
+            <a href="https://sourceforge.net/projects/omegat/"><img src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
           </li>
           <li>
-            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24"/> Github</a>
+            <a href="github.com/omegat-org/"><img src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
           </li>
           <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24"/> Twitter</a>
+            <a href="https://twitter.com/OmegaTOfficial"><img src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24"/> Facebook</a>
+            <a href="https://www.facebook.com/OmegaTOfficial"><img src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
           </li>
         </ul>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li><a href="manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
           <li><a href="tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
@@ -405,11 +403,9 @@ areas for which further volunteers would be more than welcome!</p>
           <li><a href="reviews"><span class="glyphicon glyphicon-heart"></span> Reviews</a></li>
         </ul>
       </div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
-              <div class="col-sm-2 footer-column"><!-- --></div>
-      <div class="col-sm-2 footer-column"><!-- --></div>
       <div class="col-sm-2 footer-column">
         <h4>The OmegaT Project</h4>
+        <div class="header-line"><!----></div>
         <ul>
           <li>
           <a href="contact"><span class="glyphicon glyphicon-envelope"></span> Contact and Support</a>
@@ -417,11 +413,13 @@ areas for which further volunteers would be more than welcome!</p>
           <li>
             <a href="about"><span class="glyphicon glyphicon-question-sign"></span> About</a>
           </li>
+          <li>
+            <a href="philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+          </li>
         </ul>
       </div>
-    </div>
   </div>
-  <p>Copyright &#xA9; 2017 - <a href="/omegat-website">omegat.org</a></p>
+  <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/">omegat.org</a></p>
 </footer>
 
 
